--- a/ultimate-bluetooth-rag/package.json
+++ b/ultimate-bluetooth-rag/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240829.0",
     "@types/node": "^20.12.12",
+    "tsx": "^4.7.0",
     "typescript": "^5.4.5",
-    "wrangler": "^3.60.0",
-    "tsx": "^4.7.0"
+    "wrangler": "^4.28.1"
   }
-} 
+}
